# discord-client

./: .gitignore  CMakeLists.txt  README.md
include/discord-client/: BodyBase.hpp  DiscordObjectBase.hpp  DiscordObjects.hpp  Param.hpp  Request.hpp  RequestBody.hpp  ResponseBody.hpp  Types.hpp  UriPath.hpp
include/discord-client/_impl/: DiscordObjectBaseImpl.hpp
include/discord-client/channel/: Channel.hpp  ChannelBase.hpp  ChannelId.hpp  ChannelNameAndType.hpp
include/discord-client/guild/: ContentFilterLevel.hpp  Guild.hpp  GuildBase.hpp  GuildCreator.hpp  GuildEmbedBase.hpp  GuildFeature.hpp  GuildId.hpp  GuildImpl.hpp  GuildMember.hpp  GuildMemberBase.hpp  GuildModifier.hpp  MessageNotificationLevel.hpp  MfaLevel.hpp  PremiumTier.hpp  UnavailableGuild.hpp  UnavailableGuildBase.hpp  VerificationLevel.hpp
include/discord-client/object/: __DiscordObjectBase.hpp
include/discord-client/role/: Role.hpp  RoleBase.hpp
include/discord-client/types/: Base64.hpp  Boolean.hpp  DiscordParam.hpp  Enum.hpp  Integer.hpp  Snowflake.hpp  String.hpp  Timestamp.hpp  Types.hpp  __DiscordParam.hpp
include/discord-client/voice/: VoiceRegionBase.hpp  VoiceRegionId.hpp  VoiceStateBase.hpp  VoiceStateWithoutGuild.hpp
src/discord-client/: CMakeLists.txt  Request.cpp  RequestBody.cpp  UriPath.cpp  json11.cpp
src/discord-client-test/: CMakeLists.txt
src/discord-client-test/ClassTest/: CMakeLists.txt
src/discord-client-test/ClassTest/src/: BaseTypes.cpp  Param.cpp  UriPath.cpp
src/discord-client-test/HogehogeTest/: CMakeLists.txt  test.cpp
src/discord-client/guild/: ContentFilterLevel.cpp  Guild.cpp  GuildCreator.cpp  GuildId.cpp  GuildModifier.cpp
src/discord-client/types/: Base64.cpp  Boolean.cpp  Integer.cpp  Snowflake.cpp  String.cpp  Timestamp.cpp
src/discord-client/voice/: VoiceRegionId.cpp
